diesel_compile_tests/tests/fail/expressions_can_only_be_compared_for_equality_to_expressions_of_same_type.stderr
error[E0277]: the trait bound `str: diesel::Expression` is not satisfied
  --> tests/fail/expressions_can_only_be_compared_for_equality_to_expressions_of_same_type.rs:15:19
   |
15 |     let pred = id.eq("string");
   |                   ^^ the trait `diesel::Expression` is not implemented for `str`, which is required by `&str: AsExpression<diesel::sql_types::Integer>`
   |
   = help: the following other types implement trait `diesel::Expression`:
             &T
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
             (T0, T1, T2, T3, T4, T5)
             (T0, T1, T2, T3, T4, T5, T6)
             (T0, T1, T2, T3, T4, T5, T6, T7)
           and $N others
   = note: required for `&str` to implement `diesel::Expression`
   = note: required for `&str` to implement `AsExpression<diesel::sql_types::Integer>`

error[E0271]: type mismatch resolving `<name as Expression>::SqlType == Integer`
  --> tests/fail/expressions_can_only_be_compared_for_equality_to_expressions_of_same_type.rs:16:19
   |
16 |     let pred = id.eq(name);
   |                   ^^ type mismatch resolving `<name as Expression>::SqlType == Integer`
   |
note: expected this to be `diesel::sql_types::Text`
  --> tests/fail/expressions_can_only_be_compared_for_equality_to_expressions_of_same_type.rs:8:17
   |
8  |         name -> VarChar,
   |                 ^^^^^^^
   = note: required for `columns::name` to implement `AsExpression<diesel::sql_types::Integer>`
